--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <body>
         <h1 class="heading">CSS Grid examples</h1>  
         <div class="grid-bin">
-            <div class="item1">1Spanish <br>hola</div>
-            <div class="item2">2French <br>bonjour</div>
-            <div class="item3">3Chinese <br>ni hao</div>
-            <div class="item4">4German <br>hallo</div>
-            <div class="item5">5Italian <br>ciao</div>
-            <div class="item6">6Irish <br>dia dhuit</div>
-            <div class="item7">7Portuguese <br>ola</div>
-            <div class="item8">8Hindi <br>namaste</div>
-            <div class="item9">9Japanese <br>kon`nichiwa</div>
-            <div class="item10">10Czech <br>ahoj</div>
-            <div class="item11">11Welsh <br>helo</div>
+            <div class="item1">Spanish <br>hola</div>
+            <div class="item2">French <br>bonjour</div>
+            <div class="item3">Chinese <br>ni hao</div>
+            <div class="item4">German <br>hallo</div>
+            <div class="item5">Italian <br>ciao</div>
+            <div class="item6">Irish <br>dia dhuit</div>
+            <div class="item7">Portuguese <br>ola</div>
+            <div class="item8">Hindi <br>namaste</div>
+            <div class="item9">Japanese <br>kon`nichiwa</div>
+            <div class="item10">Czech <br>ahoj</div>
+            <div class="item11">Welsh <br>helo</div>
 
         </div>  
     </body>
